<resources>
    <string name="app_name">EBussnessApplication</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_commodity_detail">CommodityDetail</string>
    <string name="invoice_head_data">#发票抬头:&#160;</string>
    <string name="invoice_head_info_data">明细</string>
    <string name="search_no_key">暂无搜索字</string>
    <string name="confirm_delete_commodity_message">确认将全部商品删除?</string>
    <string name="exit_tips">再按一次离开你!</string>
    <string name="delete_all_favorite_tips">收藏删除后将无法恢复，请确认是否删除全部收藏记录</string>
    <string name="test_shopping_cart_name">购物车商品</string>
    <string name="test_search">我的搜索</string>
    <string name="test_commodity">商品</string>
    <string name="test_category">分类</string>
    <string name="test_add_commodity">添加商品</string>
    <string name="express_title">快递:</string>
    <string name="sucess_status">成功</string>
    <string name="collection">收藏</string>
    <string name="remove_collection">取消收藏</string>
    <string name="shopping_cart_invalid_commodity">购物车内共用%s件商品已失效,且不计入本次结算</string>
    <string name="invalid">已失效</string>
    <string name="quantity">数量：</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="clear_shopping_cart_message">确定清空购物车?</string>
    <string name="has_unpaid_acution_order">您有待支付的拍卖订单</string>
    <string name="delete_commodity_message">确定删除商品?</string>
    <string name="please_select_commodity_type">请选择商品类型</string>
    <string name="home_shopping_cart_text">购物车共有</string>
    <string name="home_shopping_cart_number">%s件商品</string>
    <string name="invoice_person">个人</string>
    <string name="limit_buy_title">限购</string>
    <string name="full_gift_title">满赠</string>
    <string name="full_cut_title">满减</string>
    <string name="buy_gift_title">买赠</string>
    <string name="no_limit_num">不限购</string>
    <string name="full_cut_gradient">满减梯度</string>
    <string name="forever">永久</string>
	<string name="price_mark">¥</string>
    <string name="off_line_tips">非常抱歉，该商品已下线</string>
    <string name="error_acution_network_exception">网络异常，出价失败</string>
    <string name="error_network_exception">网络连接异常，请检查网络</string>
    <string name="error_service_exception">服务器异常，请稍后再试</string>
    <string name="error_op_service_exception">操作失败，服务器异常，请稍后再试</string>
    <string name="error_search_null_input">请输入要搜索的商品</string>
    <string name="error_invoice_null">操作失败，请填写抬头</string>
    <string name="error_address_null">您还没有设置地址信息，请前往我的进行设置</string>
    <string name="error_invoice_length_exceed">纳税人识别号长度不符合</string>
    <string name="error_qr_network_exception">二维码获取失败，请稍后再试</string>
    <string name="payment_timeout_tips">请在15分钟内完成支付，否则支付二维码将失效.\n请按菜单键查看商品购买协议.</string>
    <string name="order_title">订单号:   </string>
    <string name="jiner"></string>
    <string name="payment_price">¥%s元</string>
    <string name="weixin_payment">微信支付</string>
    <string name="zhifubao_payment">支付宝支付</string>
    <string name="continue_payment">继续支付</string>
    <string name="confirm_exit">确认退出</string>
    <string name="payment_close">关   闭</string>
    <string name="payment_help">问题帮助</string>
    <string name="exit_payment_message">确认要离开支付?\n请在两小时内完成支付,否则订单将被取消</string>
    <string name="shopping_cart_null_tips">购物车为空</string>
    <string name="invoice_input_company_name">填写单位名称</string>
    <string name="invoice_input_company_number">填写纳税人识别号</string>
    <string name="commodity_off_line">非常抱歉，该商品已下线！</string>
    <string name="special_off_line">非常抱歉，该专题已下线！</string>
    <string name="play_error">播放错误</string>
    <string name="collection_item_null_tips">您暂无收藏信息</string>
    <string name="order_item_null_tips">您暂无订单信息</string>
    <string name="afterservice_item_null_tips">您暂无售后信息</string>
    <string name="all_category">全部</string>
    <string name="commodity_sku_out_of_stock">库存不足</string>
    <string name="commodity_sku_out_of_homebuy">您已达到此商品的购买上限</string>
    <string name="invoice_head_tips">单位名称最多为25个中文字</string>
    <string name="player_loading_tip_zb">吭哧...吭哧...加载不动了...</string>
    <string name="no_network_tip_zb">您的网络迷路了，请检查网络设置！</string>
    <string name="setting_zb">网络检查</string>
    <string name="player_error_ignore_zb">继续使用</string>
    <string name="load_view_netlinking_zb">网络连接中，请稍候...</string>
    <string name="load_view_netrate_zb">即时网速</string>
    <string name="invoice_company_number_error">纳税人识别号有非法字符</string>
    <string name="search_result_number">的商品共&#160;%s&#160;件</string>
    <string name="add_commodity_to_shoppingcart_sucess_title">商品已添加到购物车</string>
    <string name="continue_shopping">继续购物</string>
    <string name="enter_shoppingcart">进入购物车</string>
    <string name="business_phone">咨询电话：%s</string>
    <string name="sku_offline">该商品规格已经下架</string>
    <string name="set_default_address_tip">请前往我的设置送货信息</string>
    <string name="back_tip1">按&#160;“返回</string>
    <string name="back_tip2">&#160;”&#160;回到上一页</string>
    <string name="order_limit_buy_tips">订单内商品已超限购数量上限，请重新下单</string>
    <string name="tips1">按&#160;“确认键</string>
    <string name="tips3">&#160;”&#160;进行加价抢拍</string>
    <string name="tips4">&#160;”&#160;前去支付</string>
    <string name="tips33">&#160;”&#160;查看大图</string>
    <string name="acution_add_price_sucess">竞拍成功</string>
    <string name="acution_title_ready">当前竞拍价</string>
    <string name="acution_title_top">最终竞拍价</string>
    <string name="transaction_finish">交易完成</string>
    <string name="transaction_close">交易关闭</string>
    <string name="acution_finish">竞拍结束</string>
    <string name="acution_payment">去支付</string>
    <string name="acution_end">已结束</string>
    <string name="acution_commotity_null">暂无可拍卖的商品</string>
    <string name="acution_has_top_price">您有商品出价最高，无法参与其他商品竞拍</string>
    <string name="information_ok_tips">按OK键显示详情信息</string>
    <string name="setting">前往设置</string>
    <string name="skip">跳过</string>
    <string name="settip">您还没有设置地址信息，请前往我的进行设置。</string>
    <string name="add_address">添加新的信息</string>
    <string name="save">保存</string>
    <string name="saveDefault">保存并设为默认</string>
    <string name="recipient">收件人：</string>
    <string name="phone">联系电话：</string>
    <string name="region">所在地区</string>
    <string name="select">请选择</string>
    <string name="street">街道</string>
    <string name="filladdress">请填写详细地址</string>
    <string name="ordernum">订单号：</string>
    <string name="afternumber">售后编号：</string>
    <string name="money">账单金额</string>
    <string name="logistics">查看物流</string>
    <string name="myorder">我的订单</string>
    <string name="invoice">物流：</string>
    <string name="ordersubmit">订单提交</string>
    <string name="pay">付款</string>
    <string name="refundtv">退款</string>
    <string name="purchasequantity">购买数量</string>
    <string name="aftersaletype">售后类型</string>
    <string name="exchange">换货</string>
    <string name="delivery">发货</string>
    <string name="end">收货</string>
    <string name="aftersale">售后服务</string>
    <string name="servicephone">客服电话：</string>
    <string name="commodityname">商品名称</string>
    <string name="submit">提交申请</string>
    <string name="confirm">确认</string>
    <string name="refund">请选择退款原因</string>
    <string name="check">订单详情</string>
    <string name="confirmdelete">确认删除</string>
    <string name="deleteaddresstip">该操作无法恢复，是否确认删除</string>
    <string name="aftersaleway">售后方式：</string>
    <string name="count">数量：</string>
    <string name="countun">数量</string>
    <string name="afterwhy">售后原因：</string>
    <string name="afterwhyno">售后原因</string>
    <string name="cancelapplication">取消申请</string>
    <string name="waitingpayment">待付款</string>
    <string name="sendgoods">待发货</string>
    <string name="receivinggoods">待收货</string>
    <string name="completetransaction">交易完成</string>
    <string name="tradingclosed">交易关闭</string>
    <string name="invoiceinfo">发票信息</string>
    <string name="invoicetitle">发票抬头：</string>
    <string name="invoicecontent">发票内容：</string>
    <string name="invoice_number">纳税人识别号:</string>
    <string name="processing">处理中</string>
    <string name="refunding">退款中</string>
    <string name="refunded">已退款</string>
    <string name="processed">已处理</string>
    <string name="replacegoods">更换商品</string>
    <string name="refundamount">退款金额</string>
    <string name="close">申请关闭</string>
    <string name="aftersalestip">非常抱歉，该商品已超过售后期。</string>
    <string name="exceptiontip">操作失败，服务器异常，请稍后再试。</string>
    <string name="perfectinformationtip">操作失败，请完善您的信息。</string>
    <string name="phonetip">请输入正确的电话号！</string>
    <string name="refundreason1">商品买错了</string>
    <string name="refundreason2">重复下单或误下单</string>
    <string name="refundreason3">发票信息有误</string>
    <string name="refundreason4">支付方式错误</string>
    <string name="refundreason5">不想买了</string>
    <string name="refundreason6">其它原因</string>
    <string name="unit">单位</string>
    <string name="commodityprice">商品总价</string>
    <string name="freight">运费</string>
    <string name="orderprice">订单总价</string>
    <string name="agreement">《大麦电视购物频道用户协议》</string>
    <string name="wordlimit">详细地址最多为40个字</string>
    <string name="wordlimitre">收件人最多为16个字</string>
    <string name="invocetitle">发票抬头：个人</string>
    <string name="logisticstip">物流信息异常</string>
    <string name="dataexception">数据异常 请退出订单界面重试！</string>
    <string name="checkall">全选</string>
    <string name="totalprice">商品总价：</string>
    <string name="quantityofcommodity">商品数量：</string>
    <string name="affirm">结算</string>
    <string name="empty">清空</string>
    <string name="shoppingempty">购物车空了，心却不能空</string>
    <string name="shopping">去购物</string>
    <string name="shoppingtip1">在商品上按“OK键</string>
    <string name="shoppingtip2">”可呼出更多功能</string>
    <string name="qrcodeinput">请用手机扫码输入新地址</string>
    <string name="ordertype">订单类型</string>
    <string name="total">全部</string>
    <string name="bestbuy">优购订单</string>
    <string name="auction">拍卖订单</string>
    <string name="orderstatus">订单状态</string>
    <string name="gopay">待支付</string>
    <string name="goshipping">待发货</string>
    <string name="goreceive">待收货</string>
    <string name="complete">交易完成</string>
    <string name="closed">交易关闭</string>
    <string name="hidetip">按“返回键”隐藏</string>
    <string name="inputprompt">使用遥控器输入</string>
</resources>