<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:background="#D3D3D3"
    android:gravity="center_horizontal">
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textColor="#000000"
       android:textSize="@dimen/sp_43"
       android:text="@string/refund"
       android:gravity="center"
       android:layout_marginTop="@dimen/gap_orderdetailsdialog_113"
       android:textStyle="bold"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="@dimen/gap_addressmanager_67"
       android:orientation="horizontal"
       android:gravity="center"
       android:layout_marginTop="@dimen/length_80">
       <Button
           android:id="@+id/btn1"
           android:layout_width="@dimen/width_categorymainitemview_329"
           android:layout_height="match_parent"
           android:background="@drawable/refundbutton_focus"
           android:textColor="@drawable/textcolor"
           android:textSize="@dimen/sp_24"
           android:text="@string/refundreason1"/>
       <Button
           android:id="@+id/btn2"
           android:layout_width="@dimen/width_categorymainitemview_329"
           android:layout_height="match_parent"
           android:background="@drawable/refundbutton_focus"
           android:textColor="@drawable/textcolor"
           android:textSize="@dimen/sp_24"
           android:text="@string/refundreason2"
           android:layout_marginLeft="@dimen/gap"/>
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/gap_addressmanager_67"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/gap">
        <Button
            android:id="@+id/btn3"
            android:layout_width="@dimen/width_categorymainitemview_329"
            android:layout_height="match_parent"
            android:background="@drawable/refundbutton_focus"
            android:textColor="@drawable/textcolor"
            android:textSize="@dimen/sp_24"
            android:text="@string/refundreason3"/>
        <Button
            android:id="@+id/btn4"
            android:layout_width="@dimen/width_categorymainitemview_329"
            android:layout_height="match_parent"
            android:background="@drawable/refundbutton_focus"
            android:textColor="@drawable/textcolor"
            android:textSize="@dimen/sp_24"
            android:text="@string/refundreason4"
            android:layout_marginLeft="@dimen/gap"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/gap_addressmanager_67"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/gap">
        <Button
            android:id="@+id/btn5"
            android:layout_width="@dimen/width_categorymainitemview_329"
            android:layout_height="match_parent"
            android:background="@drawable/refundbutton_focus"
            android:textColor="@drawable/textcolor"
            android:textSize="@dimen/sp_24"
            android:text="@string/refundreason5"/>
        <Button
            android:id="@+id/btn6"
            android:layout_width="@dimen/width_categorymainitemview_329"
            android:layout_height="match_parent"
            android:background="@drawable/refundbutton_focus"
            android:textColor="@drawable/textcolor"
            android:textSize="@dimen/sp_24"
            android:text="@string/refundreason6"
            android:layout_marginLeft="@dimen/gap"/>
    </LinearLayout>

</LinearLayout>