<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    android:layout_marginTop="@dimen/length_7">

    <TextView
        android:id="@+id/reachtip1"
        android:layout_width="@dimen/length_80"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/ordersubmit"
        android:textSize="@dimen/sp_20"
        android:textColor="#3B3B3B"
        android:gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/reachtip2"
        android:layout_width="@dimen/length_80"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/reachtip1"
        android:layout_marginLeft="@dimen/gap_logistics_210"
        android:layout_toEndOf="@+id/reachtip1"
        android:layout_toRightOf="@+id/reachtip1"
        android:text="@string/pay"
        android:textColor="#3B3B3B"
        android:textSize="@dimen/sp_20"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/reachtip3"
        android:layout_width="@dimen/length_80"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/reachtip2"
        android:layout_marginLeft="@dimen/gap_logistics_270"
        android:layout_toEndOf="@+id/reachtip2"
        android:layout_toRightOf="@+id/reachtip2"
        android:text="@string/delivery"
        android:textSize="@dimen/sp_20"
        android:textColor="#3B3B3B"
        android:gravity="center"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/reachtip4"
        android:layout_width="@dimen/length_80"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/reachtip3"
        android:layout_marginLeft="@dimen/gap_logistics_210"
        android:layout_toEndOf="@+id/reachtip3"
        android:layout_toRightOf="@+id/reachtip3"
        android:text="@string/end"
        android:textSize="@dimen/sp_20"
        android:textColor="#3B3B3B"
        android:gravity="center"
        android:textStyle="bold"/>
</RelativeLayout>