<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/width_adduser_341"
        android:layout_height="@dimen/height_adduser_341"
        android:layout_marginTop="@dimen/gap_adduser_123"
        android:orientation="vertical"
        android:id="@+id/receiveQr"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"></LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_adduser_35"
        android:text="@string/qrcodeinput"
        android:textSize="@dimen/sp_33"
        android:layout_below="@+id/receiveQr"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView4" />

    <LinearLayout
        android:layout_width="@dimen/width_adduser_587"
        android:layout_height="@dimen/height_adduser_67"
        android:layout_marginTop="@dimen/gap_adduser_57"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/goSave"
            android:textSize="@dimen/sp_24"
            android:layout_width="@dimen/width_adduser_267"
            android:layout_height="match_parent"
            android:background="@drawable/refundbutton_focus"
            android:text="@string/inputprompt"
            android:textColor="@drawable/textsavecolor"/>

        <Button
            android:id="@+id/ok"
            android:textSize="@dimen/sp_24"
            android:layout_width="@dimen/width_adduser_267"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/gap_adduser_53"
            android:background="@drawable/refundbutton_focus"
            android:text="@string/ok"
            android:textColor="@drawable/textsavecolor"/>
    </LinearLayout>


</RelativeLayout>